tests/ui/builtin-superkinds/builtin-superkinds-in-metadata.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-in-metadata.rs:13:56
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |                                                        ^^^^ `T` cannot be sent between threads safely
   |
note: required because it appears within the type `X<T>`
  --> $DIR/builtin-superkinds-in-metadata.rs:9:8
   |
LL | struct X<T>(T);
   |        ^
note: required by a bound in `RequiresRequiresShareAndSend`
  --> $DIR/auxiliary/trait_superkinds_in_metadata.rs:7:58
   |
LL | pub trait RequiresRequiresShareAndSend : RequiresShare + Send { }
   |                                                          ^^^^ required by this bound in `RequiresRequiresShareAndSend`
help: consider further restricting type parameter `T` with trait `Send`
   |
LL | impl <T:Sync+'static + std::marker::Send> RequiresRequiresShareAndSend for X<T> { }
   |                      +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
